https://bugs.webkit.org/show_bug.cgi?id=36703 Timer restart loop during page loading

Reviewed by Kenneth Rohde Christiansen.

Fix regression introduced in http://trac.webkit.org/changeset/54526.
Restarting the request timer unconditionally from the timer callback is a bad idea.
Instead, start the timer when a non-cached request completes.

* loader/loader.cpp:
(WebCore::Loader::Host::nonCacheRequestComplete):
(WebCore::Loader::Host::servePendingRequests):



Canonical link: https://commits.webkit.org/48017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56723 268f45cc-cd09-0410-ab3c-d52691b4dbfc