WebCore/loader/loader.cpp
@@ -287,6 +287,8 @@ void Loader::Host::nonCacheRequestComplete()
 {
     --m_nonCachedRequestsInFlight;
     ASSERT(m_nonCachedRequestsInFlight >= 0);
+
+    cache()->loader()->scheduleServePendingRequests();
 }
 
 bool Loader::Host::hasRequests() const
@@ -323,7 +325,6 @@ void Loader::Host::servePendingRequests(RequestQueue& requestsPending, bool& ser
         bool shouldLimitRequests = !m_name.isNull() || docLoader->doc()->parsing() || !docLoader->doc()->haveStylesheetsLoaded();
         if (shouldLimitRequests && m_requestsLoading.size() + m_nonCachedRequestsInFlight >= m_maxRequestsInFlight) {
             serveLowerPriority = false;
-            cache()->loader()->scheduleServePendingRequests();
             return;
         }
         requestsPending.removeFirst();
